<resources>
    <string name="app_name">Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_1">Spotify Streamer</string>
    <string name="app_2">Super Duo</string>
    <string name="app_3">Build It Bigger</string>
    <string name="app_4">XYZ Reader</string>
    <string name="app_5">Capstone</string>
    <string name="title">My Nanodegree Apps!</string>
</resources>
