<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/fragment_back">

    <TextView
        android:text="@string/title"
        android:textSize="30dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_1"
        android:id="@+id/button1"
        android:gravity="center"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_2"
        android:id="@+id/button2"
        android:gravity="center"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_3"
        android:id="@+id/button3"
        android:gravity="center"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_4"
        android:id="@+id/button4"
        android:gravity="center"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_5"
        android:id="@+id/button5"
        android:gravity="center"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</LinearLayout>
